add docker compose for the collector, zipkin and jaeger

--- a/rebar.config
+++ b/rebar.config
@@ -6,8 +6,7 @@
         opentelemetry,
 
         {opentelemetry_api_experimental, {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry_api_experimental"}},
-        {opentelemetry_experimental, {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"},
-                         "apps/opentelemetry_experimental"}}
+        {opentelemetry_experimental, {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry_experimental"}}
        ]}.
 
 {relx, [{release, {roll_dice, "0.1.0"},
