use fork with fixes for metrics in deps

--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,11 @@
         opentelemetry_exporter,
         opentelemetry,
 
-        {opentelemetry_api_experimental, {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry_api_experimental"}},
-        {opentelemetry_experimental, {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry_experimental"}}
+        {opentelemetry_api, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry_api"}},
+        {opentelemetry, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry"}},
+
+        {opentelemetry_api_experimental, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry_api_experimental"}},
+        {opentelemetry_experimental, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry_experimental"}}
        ]}.
 
 {relx, [{release, {roll_dice, "0.1.0"},
