add an instrumented frontend

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,6 +1,8 @@
 [
  {roll_dice, []},
 
+ {opentelemetry_elli, [{excluded_paths, ["/static", "/favicon.ico"]}]},
+
  {opentelemetry_experimental,
   [{readers, [#{module => otel_metric_reader,
                 config => #{export_interval_ms => 1000,
