--- a/rebar.config
+++ b/rebar.config
@@ -4,13 +4,18 @@
         opentelemetry_api,
         opentelemetry_exporter,
         opentelemetry,
+        opentelemetry_elli,
 
-        {opentelemetry_api, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry_api"}},
-        {opentelemetry, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry"}},
-
-        {opentelemetry_api_experimental, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry_api_experimental"}},
-        {opentelemetry_experimental, {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang", {branch, "metrics-resource"}, "apps/opentelemetry_experimental"}}
+        {opentelemetry_api_experimental,
+         {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang",
+          {branch, "main"}, "apps/opentelemetry_api_experimental"}},
+        {opentelemetry_experimental,
+         {git_subdir, "http://github.com/tsloughter/opentelemetry-erlang",
+          {branch, "main"}, "apps/opentelemetry_experimental"}}
        ]}.
+
+%% builds js/app.js into priv/static/index.js
+{pre_hooks, [{compile, "npm run build"}]}.
 
 {relx, [{release, {roll_dice, "0.1.0"},
          [opentelemetry_exporter,
@@ -18,30 +23,6 @@
           opentelemetry,
           recon,
           roll_dice,
-          sasl]},
-
-        {mode, dev},
-
-        %% automatically picked up if the files
-        %% exist but can be set manually, which
-        %% is required if the names aren't exactly
-        %% sys.config and vm.args
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"}
-
-        %% the .src form of the configuration files do
-        %% not require setting RELX_REPLACE_OS_VARS
-        %% {sys_config_src, "./config/sys.config.src"},
-        %% {vm_args_src, "./config/vm.args.src"}
+          sasl]}
 ]}.
 
-{profiles, [{prod, [{relx,
-                     [%% prod is the default mode when prod
-                      %% profile is used, so does not have
-                      %% to be explicitly included like this
-                      {mode, prod}
-
-                      %% use minimal mode to exclude ERTS
-                      %% {mode, minimal}
-                     ]
-            }]}]}.
